# algae-microscopy-classifier

./: README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
data/test/labels/: 00701.txt  00702.txt  00703.txt  00704.txt  00705.txt  00706.txt  00707.txt  00708.txt  00709.txt  00710.txt  00711.txt  00712.txt  00713.txt  00714.txt  00715.txt  00716.txt  00717.txt  00718.txt  00719.txt  00720.txt  00721.txt  00722.txt  00723.txt  00724.txt  00725.txt  00726.txt  00727.txt  00728.txt  00729.txt  00730.txt  00731.txt  00732.txt  00733.txt  00734.txt  00735.txt  00736.txt  00737.txt  00738.txt  00739.txt  00740.txt  (+260 more)
data/train/labels/: 00001.txt  00002.txt  00003.txt  00004.txt  00005.txt  00006.txt  00007.txt  00008.txt  00009.txt  00010.txt  00011.txt  00012.txt  00013.txt  00014.txt  00015.txt  00016.txt  00017.txt  00018.txt  00019.txt  00020.txt  00021.txt  00022.txt  00023.txt  00024.txt  00025.txt  00026.txt  00027.txt  00028.txt  00029.txt  00030.txt  00031.txt  00032.txt  00033.txt  00034.txt  00035.txt  00036.txt  00037.txt  00038.txt  00039.txt  00040.txt  (+660 more)
notebooks/: exploratary_data_analysis.ipynb  feature_importance_fisher.ipynb  traditional_ml_classifiers.ipynb  train_cnn_classifier.ipynb  verify_data_pipeline.ipynb  visualize_algae.ipynb  yolo_based_evaluation.py
outputs/: best_ml_model_xgboost.pkl  extracted_features.csv  feature_scaler.pkl  fisher_scores_all_features.csv  recommended_features.csv
src/data/: Data_import.py  __init__.py  algae_dataset.py  dataloader.py
